After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754091 - libgcab does not set _A_NAME_IS_UTF when filenames are UTF-8
libgcab does not set _A_NAME_IS_UTF when filenames are UTF-8
Status: RESOLVED FIXED
Product: msitools
Classification: Other
Component: gcab
git
Other Linux
: Normal normal
: 1.0
Assigned To: Richard Hughes
msitools maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-08-25 18:30 UTC by Richard Hughes
Modified: 2015-08-26 12:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
initial patch for review (953 bytes, patch)
2015-08-25 20:26 UTC, Richard Hughes
committed Details | Review

Description Richard Hughes 2015-08-25 18:30:53 UTC
According to https://msdn.microsoft.com/en-us/library/bb417343.aspx#utf_enc we need to set the _A_NAME_IS_UTF when we have a non ASCII filename detected. I guess it makes sense to set this automatically and not add any new API. If this is the case, let me know and I'll cook up a patch.
Comment 1 Marc-Andre Lureau 2015-08-25 19:50:21 UTC
adding the flag sounds fine to me :)

thanks
Comment 2 Richard Hughes 2015-08-25 20:26:28 UTC
Created attachment 309983 [details] [review]
initial patch for review
Comment 3 Marc-Andre Lureau 2015-08-25 23:44:18 UTC
Review of attachment 309983 [details] [review]:

ack
Comment 4 Richard Hughes 2015-08-26 12:50:06 UTC
Review of attachment 309983 [details] [review]:

Thanks for the quick review!