Automatically set flag if UTF-8 encoding detected

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=754091